--- a/Addons/addons.yml
+++ b/Addons/addons.yml
@@ -1,2 +1,3 @@
 addons:
-- "WorldGuard Addon!wg-addon-modern!timderspieler!The WorldGuard integration allows you to use region barriers and region restrictions.!1.0!GRASS_BLOCK!https://github.com/timderspieler/DeluxeCombat-API/raw/main/Addons/Files/WorldGuard.jar!1.13,1.14,1.15,1.16,1.17,1.18,1.19!1!true"
+- "WorldGuard Addon Modern!wg-addon-modern!timderspieler!The WorldGuard integration allows you to use region barriers and region restrictions.!1.0!WOODEN_AXE!https://github.com/timderspieler/DeluxeCombat-API/raw/main/Addons/Files/WorldGuard.jar!1.13,1.14,1.15,1.16,1.17,1.18,1.19!1!true"
+- "WorldGuard Addon Legacy!wg-addon-legacy!timderspieler!The WorldGuard integration allows you to use region barriers and region restrictions.!1.0!WOODEN_AXE!https://github.com/timderspieler/DeluxeCombat-API/raw/main/Addons/Files/WorldGuard.jar!1.8,1.9,1.10,1.11,1.12!1!true"
